<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Event">

    <ImageView
        android:id="@+id/imageView6"
        android:layout_width="401dp"
        android:layout_height="376dp"
        android:layout_marginBottom="450dp"
        android:scaleType="fitXY"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/event" />

    <LinearLayout

        android:layout_width="395dp"
        android:layout_height="413dp"
        android:layout_marginBottom="16dp"
        android:orientation="vertical"
        android:padding="32dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent">


        <TextView
            android:id="@+id/textView7"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/event_topic"
            android:textAlignment="viewStart"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textView8"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:text="@string/event_time"
            android:textAlignment="viewStart"
            android:textColor="@color/material_dynamic_neutral_variant20"
            android:textSize="17sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/event_abt"
            android:textAlignment="viewStart"
            android:textColor="@color/black"
            android:textSize="15sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textView10"
            android:layout_width="wrap_content"
            android:layout_height="123dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/edittext_background"
            android:text="@string/event_des"
            android:textAlignment="viewStart"

            android:textColor="@color/black"
            android:textSize="14sp" />

        <ImageView
            android:id="@+id/imageView8"
            android:layout_width="307dp"
            android:layout_height="37dp"
            android:layout_marginTop="5dp"
            app:srcCompat="@drawable/part" />

        <Button
            android:id="@+id/button4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="18dp"
            android:backgroundTint="@color/Btn_color"
            android:text="@string/ticket" />

    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>