<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ListingEvent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/imageView11"
            android:layout_width="422dp"
            android:layout_height="73dp"
            app:srcCompat="@drawable/header" />

        <TextView
            android:id="@+id/textView14"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="40dp"
            android:text="@string/myevent"
            android:textColor="@color/black"
            android:textSize="30sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textView16"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="15dp"
            android:text="@string/upevent"
            android:textColor="@color/black"
            android:textSize="25sp"
            android:textStyle="bold"
            />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginLeft="45dp"
            android:layout_marginTop="15dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView17"
                android:layout_width="170dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:layout_weight="1"
                android:text="@string/event1"
                android:textAlignment="textStart"
                android:textColor="@color/material_dynamic_neutral_variant20"
                android:textSize="18sp"
                android:textStyle="bold" />

            <ImageView
                android:id="@+id/imageView14"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                app:srcCompat="@drawable/eve1" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginLeft="45dp"
            android:layout_marginTop="15dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textevent2"
                android:layout_width="170dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:layout_weight="1"
                android:text="@string/event2"
                android:textAlignment="textStart"
                android:textColor="@color/material_dynamic_neutral_variant20"
                android:textSize="18sp"
                android:textStyle="bold" />

            <ImageView
                android:id="@+id/imageevent2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                app:srcCompat="@drawable/eve2" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginLeft="45dp"
            android:layout_marginTop="15dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textevent3"
                android:layout_width="170dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:layout_weight="1"
                android:text="@string/event3"
                android:textAlignment="textStart"
                android:textColor="@color/material_dynamic_neutral_variant20"
                android:textSize="18sp"
                android:textStyle="bold" />

            <ImageView
                android:id="@+id/imageevent3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                app:srcCompat="@drawable/eve3" />

        </LinearLayout>


        <TextView
            android:id="@+id/textfinishedevent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="20dp"
            android:text="@string/finishevent"
            android:textColor="@color/black"
            android:textSize="25sp"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginLeft="45dp"
            android:layout_marginTop="15dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textevent4"
                android:layout_width="170dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:layout_weight="1"
                android:text="@string/event4"
                android:textAlignment="textStart"
                android:textColor="@color/material_dynamic_neutral_variant20"
                android:textSize="18sp"
                android:textStyle="bold" />

            <ImageView
                android:id="@+id/imageevent4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                app:srcCompat="@drawable/eve4" />
        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginLeft="45dp"
            android:layout_marginTop="15dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textevent5"
                android:layout_width="170dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:layout_weight="1"
                android:text="@string/event5"
                android:textAlignment="textStart"
                android:textColor="@color/material_dynamic_neutral_variant20"
                android:textSize="18sp"
                android:textStyle="bold" />

            <ImageView
                android:id="@+id/imageevent5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                app:srcCompat="@drawable/eve5" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="75dp"
            android:layout_marginTop="173dp"
            android:background="@color/Purple"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/homeimage3"
                android:layout_width="94dp"
                android:layout_height="41dp"
                android:layout_marginTop="15dp"
                android:layout_weight="1"
                app:srcCompat="@drawable/homei" />

            <ImageView
                android:id="@+id/listimage3"
                android:layout_width="91dp"
                android:layout_height="53dp"
                android:layout_marginTop="12dp"
                android:layout_weight="1"
                app:srcCompat="@drawable/listi" />

            <ImageView
                android:id="@+id/favimage3"
                android:layout_width="89dp"
                android:layout_height="59dp"
                android:layout_marginTop="8dp"
                android:layout_weight="1"
                app:srcCompat="@drawable/favoritei" />

            <ImageView
                android:id="@+id/profileimage3"
                android:layout_width="92dp"
                android:layout_height="45dp"
                android:layout_marginTop="14dp"
                android:layout_weight="1"
                app:srcCompat="@drawable/profilei" />
        </LinearLayout>






    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>